--- a/package.json
+++ b/package.json
@@ -79,7 +79,13 @@
     "typescript": "5.8.2",
     "typescript-eslint": "8.29.0",
     "vite": "6.2.5",
-    "wrangler": "4.7.0"
+    "wrangler": "4.7.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.5.5",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   },
   "scripts": {
     "build": "tsc -b && vite build",
